--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 
 <h2 id="playHeader" style="background-color: blue; color: white; text-align: center; display: none;"></h2>
+<p id="debug" style="background-color: green; color: white; text-align: center;"> the debug field </p>
 
 <canvas id="canvasDial" style="display: none;"></canvas>
 
@@ -439,6 +440,8 @@ function globalVars() {
 	window.setTime1 = document.getElementById('setTime')
 	window.overideArea1 = document.getElementById('overideArea')
 	window.overideBtn1 = document.getElementById('overideBtn')
+	
+	window.debug1 = document.getElementById('debug')
 
 	
 //activities
