--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 
 <h2 id="playHeader" style="background-color: blue; color: white; text-align: center; display: none;"></h2>
-<p id="debug" style="background-color: green; color: white; text-align: center;"> the debug field </p>
+<p id="debugA" style="background-color: green; color: white; text-align: center;"> the debug field </p>
+<p id="debugB" style="background-color: plum; color: white; text-align: center;"> the debug field </p>
 
 <canvas id="canvasDial" style="display: none;"></canvas>
 
@@ -441,7 +442,8 @@ function globalVars() {
 	window.overideArea1 = document.getElementById('overideArea')
 	window.overideBtn1 = document.getElementById('overideBtn')
 	
-	window.debug1 = document.getElementById('debug')
+	window.debug1 = document.getElementById('debugA')
+	window.debug2 = document.getElementById('debugB')
 
 	
 //activities
